# Robotics_Project_2

./: .gitignore  README.md  map.pgm  par.txt
imgs/: bag2_trajectory.pgm  bag3_trajectory.pgm  map_gmapping.pgm
src/: CMakeLists.txt  package.xml
src/config/: base_config.rviz  ekf_loc.yaml  gmapping.launch.xml  mapping_config.rviz
src/launch/: amcl.launch  amcl.launch.xml  mapping.launch  scan_merger.launch
src/maps/: mapppp3.pgm  mapppp3.yaml
src/p2_core/: CMakeLists.txt  package.xml
src/p2_core/config/: amcl.launch.xml  gmapping.launch.xml
src/p2_core/launch/: amcl.launch  amcl.launch.xml
src/p2_core/maps/: map_gmapping.pgm  map_gmapping.yaml
src/p2_core/src/: saver.cpp  show_path.cpp
src/p2_core/srv/: SaveMap.srv  SavePath.srv
src/src/: odom_tf.cpp  saver.cpp
